Partie 2 / MODELISATION SYSTEME SOLAIRE

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="js/celestial-body.js"></script>
     <script src="js/draw.js"></script>
 </body>
 </html>
